--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,248 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.ag-format-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+
+body {
+  /* background-color: #0077ff5e; */
+}
+.ag-courses_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+
+  /* padding: 50px 0; */
+}
+.ag-courses_item {
+  -ms-flex-preferred-size: calc(33.33333% - 30px);
+  flex-basis: calc(33.33333% - 30px);
+
+  margin: 0 15px 30px;
+
+  overflow: hidden;
+
+  border-radius: 28px;
+}
+.ag-courses-item_link {
+  display: block;
+  padding: 30px 20px;
+  background-color: #f1eeee;
+
+  overflow: hidden;
+
+  position: relative;
+}
+.ag-courses-item_link:hover,
+.ag-courses-item_link:hover .ag-courses-item_date {
+  text-decoration: none;
+  color: #121212;
+}
+.ag-courses-item_link:hover .ag-courses-item_bg {
+  -webkit-transform: scale(10);
+  -ms-transform: scale(10);
+  transform: scale(10);
+}
+.ag-courses-item_title {
+  min-height: 87px;
+  margin: 0 0 25px;
+
+  overflow: hidden;
+
+  font-weight: bold;
+  font-size: 30px;
+  color: #121212;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date-box {
+  font-size: 18px;
+  color: #121212;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date {
+  font-weight: bold;
+  color: #f9b234;
+
+  -webkit-transition: color .5s ease;
+  -o-transition: color .5s ease;
+  transition: color .5s ease
+}
+.ag-courses-item_bg {
+  height: 128px;
+  width: 128px;
+  background-color: #f9b234;
+
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+.ag-courses_item:nth-child(2n) .ag-courses-item_bg {
+  background-color: #3ecd5e;
+}
+.ag-courses_item:nth-child(3n) .ag-courses-item_bg {
+  background-color: #e44002;
+}
+.ag-courses_item:nth-child(4n) .ag-courses-item_bg {
+  background-color: #952aff;
+}
+.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
+  background-color: #cd3e94;
+}
+.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
+  background-color: #4c49ea;
+}
+
+
+
+@media only screen and (max-width: 979px) {
+  .ag-courses_item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+    flex-basis: calc(50% - 30px);
+  }
+  .ag-courses-item_title {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .ag-format-container {
+    width: 96%;
+  }
+
+}
+@media only screen and (max-width: 639px) {
+  .ag-courses_item {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .ag-courses-item_title {
+    min-height: 72px;
+    line-height: 1;
+
+    font-size: 24px;
+  }
+  .ag-courses-item_link {
+    padding: 22px 40px;
+  }
+  .ag-courses-item_date-box {
+    font-size: 16px;
+  }
+}
+.ag-courses-item_link:hover .ag-courses-item_date-box{
+  color:#FFF !important
+}
+/* ------------------------ */
+
+.cbbBGh {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: baseline;
+  align-items: baseline;
+  margin: 30px 30px 0 30px;
+}
+.hlFlRL {
+  font-size: calc(2.375rem);
+  color: var(--color-gray-1000);
+}
+.jJHTEp {
+  padding-left: 32px;
+  padding-bottom: 16px;
+}
+.hlFlRL {
+  color: var(--darkreader-text--color-gray-1000);
+}
+
+@media (min-width: 1150px){
+  .jJHTEp {
+    padding-left: 0px;
+  }
+}
+.jSshRv {
+  font-size: 18px;
+  padding-right: 32px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.module {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 3px solid #000;
+  border-radius: 10px;
+  box-shadow: rgba(60, 64, 67, 0.3) 4px 4px 4px -9px, rgba(60, 64, 67, 0.15) 9px 11px 18px 8px;
+}
+
+.title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.description {
+  margin-bottom: 10px;
+}
+
+.schedule {
+  margin-bottom: 10px;
+}
+
+.documents {
+  margin-bottom: 10px;
+}
+
+.documents div {
+  margin-bottom: 10px;
+}
+
+.documents p {
+  margin: 0;
+}
+
+.documents a {
+  color: blue;
+  text-decoration: underline;
+}
+
+.documents a:hover {
+  color: darkblue;
+}
+
+
+@media (min-width: 1024px) {
+  .title {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 640px) {
+  .title {
+    font-weight: 800;
+  }
+}
+
+.strong{
+  font-size: 1.25em;
+  font-weight: 700;
+  line-height: 1.25;
+}
